# entidad-de-registro

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  db.py  db_models.py  main.py  models.py  security.py
app/services/: csr.py  ec_remote.py  openssl_ca.py  registration.py  reniec.py  reniec_http.py  storage.py
app/static/: app.js  index.html  styles.css
demo-artifacts/: 12345678-persona-natural.cnf  12345678-persona-natural.csr  12345678-persona-natural.key.pem
openssl/: request_persona_natural.cnf
ra_reniec_openssl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scratch/: check_db.py  check_schema.py  check_sessions.py  download_tunnel.py  fix_db_schema.py  force_db_init.py  get_third_record.py  run_all.ps1  test_flow.py  verify_fix.py  verify_latest.py
scripts/: check_db.py  generate_test_csr.ps1  migrate_to_sql.py  migrate_v2.py
