[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ra-reniec-openssl"
version = "0.1.0"
description = "Entidad de Registro en Python para integrar OpenSSL CA con validacion RENIEC."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "email-validator>=2.2.0",
  "sqlalchemy>=2.0.36",
  "python-multipart>=0.0.20",
  "httpx>=0.28.1"
]

[tool.setuptools]
packages = ["app", "app.services"]
